--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -179,7 +179,7 @@ select.formbold-form-input,
     padding: 14px 25px;
     border: none;
     font-weight: 500;
-    background-color: #6a64f1;
+    background-color: #8b5c16 ;
     color: white;
     cursor: pointer;
     margin-top: 25px;
