--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Welcome to KeepMe - Food Restaurant App"
-    />
-    <title>KeepMe || C23-M4094</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css"
-    />
-  </head>
 
-  <body>
-    <main></main>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Welcome to KeepMe - Food Restaurant App" />
+  <title>KeepMe || C23-M4094</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css" />
+  <meta name="theme-color" content="#db0000" />
+  <link rel="apple-touch-icon" href="../public/images/icons/icon-96x96.png">
+  <link rel="manifest" href="../public/App.webmanifest">
+</head>
+
+<body>
+  <main></main>
+</body>
+
 </html>
