--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,8 +46,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 1em;
-  padding-top: 1em;
+  padding-top: 10px;
 }
 
 header {
