--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Welcome to KeepMe - Food Restaurant App" />
   <title>KeepMe || C23-M4094</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css" />
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
   <meta name="theme-color" content="#db0000" />
   <link rel="apple-touch-icon" href="../public/images/icons/icon-96x96.png">
   <link rel="manifest" href="../public/App.webmanifest">
