--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,7 @@ a {
   color: #000000;
   font-family: Bree Serif;
 }
+
 body {
   background-color: #F6F1E9;
   overflow-x: hidden;
@@ -23,25 +24,26 @@ body {
   flex-direction: column;
 }
 
-//FOOTER
+// APPBAR
 .navigasi {
   background-color: #E7C367;
   width: 100%;
   height: 90px;
 }
 
-.logo img{
+.logo img {
   width: 50px;
 }
 
 .logo a {
   display: flex;
   align-items: center;
-  font-family: Bree Serif;
+  font-family: Rowdies;
   font-size: 35px;
   font-weight: bold;
-  color: #000000;
+  color: #110404;
 }
+
 .all-nav {
   width: 100%;
   display: flex;
@@ -49,13 +51,14 @@ body {
   padding-top: 10px;
 }
 
+
 header {
   width: 100%;
   background: #E7C367;
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding-right: 10px;
+  padding-right: 20px;
   padding-left: 10px;
 }
 
@@ -71,6 +74,7 @@ nav ul li a {
   display: inline-block;
   color: #181817;
   font-size: 20px;
+  font-family: Yantramanav;
   padding: 20px 25px;
   border-radius: 50px;
   transition: 0.2s;
@@ -78,145 +82,58 @@ nav ul li a {
   min-height: 44px;
   min-width: 44px;
 }
+
 .btn-login {
   display: inline-block;
   color: #181817;
-  font-size: 18px;
   padding: 20px 25px;
+  font-size: 20px;
   border-radius: 35px;
   transition: 0.2s;
-  margin: 0 5px;
-  min-height: 44px;
-  min-width: 44px;
+  margin-top: 10px;
+  width: 120px;
+  height: 50px;
   background-color: #8b5c16;
+  text-align: center;
 }
 
 nav ul li a:hover {
   border-radius: 30px;
   padding: 10px;
   font-weight: bold;
-  color: #fff;
+  color: white;
+  text-decoration: none;
+  background-color: #c59143;
+  width: 160px;
+  height: 50px;
+  text-align: center;
 }
 
 .card p {
   font-size: 20px;
-  font-family: sans-serif;
+  font-family: Yantramanav;
   text-indent: 2em;
+  color: #000000;
   text-align: justify;
   line-height: 1.5;
   text-decoration: none;
 }
 
-.information h1 {
-  text-align: center;
-  color: #000000;
-  margin-top: 50px;
-  font-size: 40px;
-  padding-bottom: 8px;
-}
-
-.information p {
-  text-align: center;
-  color: #000000;
-  padding-bottom: 23px;
-  border-bottom: 2px dashed grey;
-  font-size: 20px;
-}
-
-#content {
-  flex: 5;
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 1rem 2rem;
-}
-
-.card1 {
-  box-shadow: 0 26px 58px 0 rgba(0, 0, 0, .22), 0 5px 14px 0 rgba(0, 0, 0, .18);
-  border-radius: 5px;
-  padding: 20px;
-  margin-top: 50px;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-bottom: 50px;
-  background-color: #E7C367;
-  color: #000000;
-}
-
-#goals.card {
-  margin-top: 20px;
-  margin-left: 150px;
-  margin-right: 150px;
-  margin-bottom: 50px;
-}
-
-#about-card.card{
+// ABOUT KEEPME
+#about-card.card {
   background-color: #C28220;
   border: 4px solid #fff;
   border-radius: 20px;
-  width: 520px;
-  height: 420px;
+  width: 700px;
+  height: 480px;
 }
-
-
-h2 {
-  text-align: center;
-  color: #000000;
-  padding-bottom: 8px;
-}
-//FOOTER
-footer {
-  padding-top: 10px;
-  color: white;
-  background-color: #3A2C08;
-  display: flex;
-  flex-direction: column;
-}
-.sosialmedia{
-  display: flex;
-  justify-content:center;
-
-
-}
-.footerbottom{
-  display: flex;
-  justify-content: center;
-}
-
-.socialmedia a {
-  text-decoration: none;
-}
-.socialmedia a i {
-  color: #fff;
-  margin: 10px;
-  font-size: 1.2rem;
-  border: 1px solid #fff;
-  padding: 7px;
-  border-radius: 50%;
-  margin-left: 500px;
-}
-
-.socialmedia a:hover {
-  background-color: #fff;
-  transition: 0.5s;
-
-}
-
-.socialmedia a:hover i {
-  color: #fff;
-  transition: 0.5s;
-
-}
-
-p.footerbottom {
-  text-align: center;
-}
-
-
-//ABOUT ME
 
 .about {
-  padding: 100px 0;
-  background-color:  #E7C367;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: #E7C367;
 }
 
 .about-keepme {
@@ -233,37 +150,151 @@ p.footerbottom {
 }
 
 .about-text h2 {
-  color: #000000;
+  color: #1a0000;
   font-size: 65px;
   text-transform: capitalize;
   margin-bottom: 20px;
   border-bottom: 3px solid #3A2C08;
+  font-family: Yantramanav;
 }
 
 .about-text p {
-
   color: #000000;
   letter-spacing: 1px;
   line-height: 28px;
-  margin-bottom: 45px;
+  margin: 30px 30px 30px 30px;
   font-size: 18px;
   text-align: justify;
+  font-family: Yantramanav;
 }
 
-.card-home{
+// INFORMASI KEEPME
+.information h1 {
+  font-family: Rowdies;
+  text-align: center;
+  color: #000000;
+  margin-top: 50px;
+  font-size: 40px;
+  padding-bottom: 8px;
+  padding-top: 23px;
+  border-top: 2px dashed grey;
+}
+
+.information p {
+  font-family: Rowdies;
+  text-align: center;
+  color: #000000;
+  padding-bottom: 23px;
+  border-bottom: 2px dashed grey;
+  font-size: 20px;
+}
+
+#content {
+  flex: 5;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem 2rem;
+}
+
+//.card1 {
+//   box-shadow: 0 26px 58px 0 rgba(0, 0, 0, .22), 0 5px 14px 0 rgba(0, 0, 0, .18);
+//   border-radius: 5px;
+//   padding: 20px;
+//   margin-top: 50px;
+//   margin-left: 50px;
+//   margin-right: 50px;
+//   margin-bottom: 50px;
+//   background-color: #E7C367;
+//   color: #000000;
+// }
+
+#goals.card {
+  height: auto;
+  margin-top: 20px;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-bottom: 50px;
+  color: #110404;
+  font-size: 20px;
+  font-family: Yantramanav;
+}
+
+h2 {
+  text-align: center;
+  color: #000000;
+  font-family: Rowdies;
+  padding-bottom: 8px;
+}
+
+//FOOTER
+footer {
+  padding-top: 10px;
+  color: white;
+  background-color: #3A2C08;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font-family: Yantramanav;
+}
+
+.sosialmedia {
+  display: flex;
+  justify-content: center;
+}
+
+.footerbottom {
+  display: flex;
+  justify-content: center;
+}
+
+.socialmedia a {
+  text-decoration: none;
+  font-size: 50px;
+}
+
+.socialmedia a i {
+  color: #fff;
+  margin: 10px;
+  font-size: 1.2rem;
+  border: 1px solid #fff;
+  padding: 7px;
+  border-radius: 50%;
+  margin-left: 500px;
+}
+
+.socialmedia a:hover {
+  background-color: #fff;
+  transition: 0.5s;
+}
+
+.socialmedia a:hover i {
+  color: #fff;
+  transition: 0.5s;
+}
+
+p.footerbottom {
+  text-align: center;
+}
+
+//ARTIKEL
+.card-home {
   text-align: center;
   margin-top: 30px;
   color: #000000;
+  font-family: Rowdies;
 }
-.beranda{
+
+.beranda {
   gap: 10px;
 }
-  .list-data {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 20px;
-    padding: 10px;
-  }
+
+.list-data {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 20px;
+  padding: 10px;
+}
+
 .img_card {
   width: 100%;
   height: 300px;
@@ -271,16 +302,16 @@ p.footerbottom {
 }
 
 /* list data */
-.title-main {
-  text-align: center;
-  color: #FF8303;
-}
+// .title-main {
+//   text-align: center;
+//   color: #ff0303;
+// }
 
-.list-header {
-  display: flex;
-  justify-content: space-between;
-  font-size: 15px;
-}
+// .list-header {
+//   display: flex;
+//   justify-content: space-between;
+//   font-size: 15px;
+// }
 
 .card {
   height: auto;
@@ -289,19 +320,22 @@ p.footerbottom {
   box-shadow: 0 10px 10px rgba(0, 0, 0, .1);
   padding: 1em;
   background-color: #fffffe;
+  height: 86vh;
 }
 
 .card-title a {
   text-decoration: none;
-  color: #181817;
+  color: #180303;
+  font-size: 25px;
   min-height: 44px;
   min-width: 44px;
+  font-family: Rowdies;
   display: inline-block;
 }
 
-.card-title a:hover {
-  color: #E7C367;
-}
+// .card-title a:hover {
+//   color: #E7C367;
+// }
 
 .card-description {
   text-align: justify;
@@ -321,10 +355,11 @@ p.footerbottom {
   background-color: #3A2C08;
   text-align: center;
   cursor: pointer;
-  width: 100%;
+  width: 90%;
   font-size: 20px;
-  min-height: 44px;
-  min-width: 44px;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
 }
 
 .head-card img {
@@ -340,6 +375,9 @@ p.footerbottom {
 .body-card h1 {
   margin: 0;
 }
+
+
+//TENTANG KAMI
 #ttgKami {
   padding-top: 35px;
   padding-bottom: 30px;
@@ -449,21 +487,26 @@ p.footerbottom {
   font-size: 20px;
   font-weight: 700;
   color: #2a2a2a;
+  font-family: Rowdies;
 }
 
 #ttgKami .ttgKami-item .down-content span {
-  font-size: 14px;
+  font-size: 16px;
   color: #2a2a2a;
+  font-family: Yantramanav;
 }
-#container-tentangKami{
+
+#container-tentangKami {
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
 }
-.col-tentangKami{
+
+.col-tentangKami {
   display: flex;
   flex-direction: row;
   gap: 1em;
 }
+
 .arrow {
   border: solid black;
   border-width: 0 3px 3px 0;
@@ -475,10 +518,17 @@ p.footerbottom {
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
 }
-.btn-logout{
+
+.btn-logout {
   background-color: #b88606;
   padding: 10px;
   border-radius: 30%;
+}
+
+.down-content p {
+  color: #000000;
+  font-size: 16px;
+  font-family: Yantramanav;
 }
 
 @media screen and (max-width: 1200px) {
@@ -502,17 +552,19 @@ p.footerbottom {
     display: flex;
     flex-direction: column;
   }
+
   button {
     margin-top: 10px;
     padding: 10px;
     border-radius: 999px;
     background-color: #FF8303;
     font-size: 0.5rem;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     cursor: pointer;
     min-height: 44px;
     min-width: 44px;
   }
+
   .all-nav {
     display: flex;
     flex-direction: column;
@@ -525,6 +577,7 @@ p.footerbottom {
     grid-gap: 10px;
     padding: 10px;
   }
+
   .list-data1 {
     display: grid;
     grid-template-columns: auto auto;
@@ -535,6 +588,7 @@ p.footerbottom {
   nav ul {
     width: 30%;
     display: flex;
+    position: absolute;
   }
 
   .hamburger {
@@ -545,10 +599,10 @@ p.footerbottom {
   }
 
   .hamburger .line {
-    width: 30px;
-    height: 3px;
+    width: 150px;
+    height: 30px;
     background-color: #FF8303;
-    margin: 6px 0;
+    margin: 0;
     border-radius: 10px;
   }
 
@@ -563,6 +617,7 @@ p.footerbottom {
     height: 450px;
     display: none;
   }
+
 
   nav {
     position: absolute;
@@ -581,6 +636,7 @@ p.footerbottom {
   }
 
   .nav-bar.active ul {
+
     opacity: 1;
   }
 
@@ -605,6 +661,7 @@ p.footerbottom {
     flex-direction: column;
   }
 }
+
 /* about section start */
 
 .about_section {
@@ -673,6 +730,7 @@ p.footerbottom {
   padding: 0px 40px 30px 40px;
   position: relative;
 }
+
 .client_section {
   width: 100%;
   float: left;
@@ -700,6 +758,7 @@ p.footerbottom {
   margin-top: 50px;
   padding-bottom: 100px;
 }
+
 .testimonial_section_2::after {
   content: '';
   position: absolute;
@@ -723,6 +782,7 @@ p.footerbottom {
   left: initial;
   right: 0px;
 }
+
 .client_name_text {
   width: 100%;
   float: left;
@@ -761,17 +821,11 @@ p.footerbottom {
     grid-gap: 10px;
     padding: 10px;
   }
+
   .list-data1 {
     display: grid;
     grid-template-columns: auto;
     grid-gap: 20px;
     padding: 10px;
-  }
-  #about-card.card{
-    background-color: #C28220;
-    border: 4px solid #fff;
-    border-radius: 20px;
-    width: 420px;
-    height: 320px;
   }
 }
