--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -553,17 +553,17 @@ p.footerbottom {
     flex-direction: column;
   }
 
-  button {
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 999px;
-    background-color: #FF8303;
-    font-size: 0.5rem;
-    font-family: 'Poppins', sans-serif;
-    cursor: pointer;
-    min-height: 44px;
-    min-width: 44px;
-  }
+  // button {
+  //   margin-top: 10px;
+  //   padding: 10px;
+  //   border-radius: 999px;
+  //   background-color: #FF8303;
+  //   font-size: 0.5rem;
+  //   font-family: 'Poppins', sans-serif;
+  //   cursor: pointer;
+  //   min-height: 44px;
+  //   min-width: 44px;
+  // }
 
   .all-nav {
     display: flex;
